tests/course/errors/DeleteErrorUuid.bru
meta {
  name: DeleteErrorUuid
  type: http
  seq: 9
}

delete {
  url: {{baseUrl}}/courses/invalid-id
  body: json
  auth: none
}

assert {
  res.status: in 400, 404
}
